--- a/src/blocks/MoodTracker/mood-tracker.scss
+++ b/src/blocks/MoodTracker/mood-tracker.scss
@@ -1,15 +1,157 @@
 @import "@USupport-components-library/styles";
 
 .mood-tracker {
-  &__heading {
+  padding-top: $spacing_10_0;
+  padding-bottom: $spacing_2_4;
+
+  &__content {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  &__heading-row {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
     width: 100%;
 
-    > h4 {
-      text-align: left;
+    @media screen and (min-width: $screen-md) {
+      max-width: 65%;
+    }
+
+    &__content {
+      width: 100%;
+    }
+  }
+
+  &__heading {
+    text-align: left;
+
+    &__name {
+      @include themify($themes, "color", "color_6a4ffb_8c90eb");
+    }
+  }
+
+  &__subheading-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    text-align: left;
+    padding: $spacing_2_4 0 $spacing_1_2 0;
+
+    &__subheading {
+      width: 100%;
+      font-weight: 300;
+    }
+
+    & .button {
+      margin: 0;
+
+      @media screen and (min-width: $screen-md) {
+        min-width: 20rem;
+      }
+    }
+  }
+
+  &__mascot-container {
+    display: fslex;
+    flex-direction: column;
+    align-items: center;
+    gap: $spacing_1_2;
+    width: 100%;
+    height: 100%;
+
+    &__image {
+      object-fit: contain;
+      max-height: 16rem;
+      margin: $spacing_2_4 auto;
+
+      @media screen and (min-width: $screen-md) {
+        max-height: 24rem;
+      }
+    }
+  }
+
+  &__rating-box {
+    margin-top: $spacing_1_6;
+    padding: $spacing_1_6;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: $spacing_1_6;
+    width: calc(100% - 2 * $spacing_1_6);
+
+    &__heading-container {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      gap: $spacing_1_6;
+
+      & h4 {
+        text-align: left;
+      }
+    }
+
+    &__rating {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      margin: $spacing_1_2 auto;
+      width: 100%;
+
+      @media screen and (min-width: $screen_md) {
+        max-width: 60rem;
+      }
+
+      &__emoticon-container {
+        width: 100%;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+
+        @media screen and (min-width: $screen_md) {
+          width: 12rem;
+        }
+
+        &--not-selected {
+          opacity: 0.5;
+        }
+
+        & .emoticon {
+          display: inline-block;
+          line-height: 1;
+          user-select: none;
+          margin: 0 auto;
+        }
+
+        & p {
+          text-align: center;
+          word-break: break-word;
+          margin-top: $spacing_0_4;
+        }
+
+        &__content {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+      }
+
+      &--modal {
+        max-width: 50rem;
+      }
     }
   }
 
@@ -49,59 +191,6 @@
 
   & h5.mood-tracker-button {
     font-weight: 500;
-  }
-
-  &__rating {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: $spacing_1_2;
-
-    @media screen and (min-width: $screen_md) {
-      max-width: 60rem;
-      margin: 0 auto;
-    }
-
-    &__emoticon-container {
-      width: 100%;
-      height: 9rem;
-      cursor: pointer;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-center;
-      justify-content: flex-start;
-
-      @media screen and (min-width: $screen_md) {
-        width: 12rem;
-      }
-
-      &--not-selected {
-        opacity: 0.5;
-      }
-
-      & .emoticon {
-        display: inline-block;
-        line-height: 1;
-        user-select: none;
-      }
-
-      & p {
-        text-align: center;
-        word-break: break-word;
-      }
-
-      &__text--selected {
-        &.small-text {
-          color: $color_black_37;
-        }
-      }
-
-      &__content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-    }
   }
 
   &__how-it-works-btn {
