--- a/src/blocks/Podcasts/podcasts.scss
+++ b/src/blocks/Podcasts/podcasts.scss
@@ -1,7 +1,7 @@
 @import "@USupport-components-library/styles";
 
 .podcasts {
-  padding-bottom: 100px;
+  padding-bottom: $spacing_3_2;
   text-align: left;
 
   @media screen and (min-width: $screen-md) {
@@ -9,16 +9,8 @@
   }
 
   &__main-grid {
-    justify-items: center;
-  }
-
-  &__heading-text {
-    color: $color_white_ff !important;
-  }
-
-  &__most-important-item {
-    padding-top: $spacing_5_0;
-    padding-bottom: $spacing_4_0;
+    grid-gap: $spacing_3_2;
+    padding-inline: $spacing_1_2;
   }
 
   &__search-item {
@@ -27,6 +19,11 @@
     @media screen and (min-width: $screen-lg) {
       padding-top: 0;
     }
+  }
+
+  &__most-important-item {
+    padding-top: $spacing_5_0;
+    padding-bottom: $spacing_4_0;
   }
 
   &__categories-item {
@@ -46,6 +43,81 @@
     @media screen and (min-width: $screen-lg) {
       padding-top: $spacing_2_4;
     }
+  }
+
+  &__custom-grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: $spacing_1_2;
+
+    @media screen and (min-width: $screen-md) {
+      gap: $spacing_2_0;
+    }
+
+    @media screen and (min-width: $screen-lg) {
+      gap: $spacing_2_4;
+    }
+  }
+
+  &__card-wrapper {
+    display: flex;
+    flex-direction: column;
+
+    & > * {
+      height: 100%;
+    }
+  }
+
+  @media screen and (max-width: calc($screen-md - 1px)) {
+    &__custom-grid {
+      grid-template-columns: 1fr;
+    }
+
+    &__card-wrapper {
+      grid-column: span 1 !important;
+    }
+  }
+
+  @media screen and (min-width: $screen-md) and (max-width: calc($screen-lg - 1px)) {
+    &__custom-grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    &__card-wrapper {
+      grid-column: span 1 !important;
+    }
+  }
+
+  @media screen and (min-width: $screen-lg) {
+    &__card-wrapper {
+      &:nth-child(6n + 1),
+      &:nth-child(6n + 2) {
+        grid-column: span 6;
+      }
+
+      &:nth-child(6n + 3),
+      &:nth-child(6n + 4),
+      &:nth-child(6n + 5) {
+        grid-column: span 4;
+      }
+
+      &:nth-child(6n + 6) {
+        grid-column: span 12;
+      }
+    }
+  }
+
+  &__loader-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
   }
 
   &__loading-item {
