--- a/src/blocks/Videos/videos.scss
+++ b/src/blocks/Videos/videos.scss
@@ -1,35 +1,127 @@
 @import "@USupport-components-library/styles";
 
 .videos {
+  padding-bottom: $spacing_3_2;
+  text-align: left;
+
+  @media screen and (min-width: $screen-md) {
+    padding-top: $spacing_3_2;
+  }
+
   &__main-grid {
-    justify-items: center;
+    grid-gap: $spacing_3_2;
+    padding-inline: $spacing_1_2;
   }
 
   &__search-item {
-    padding-top: 24px;
+    padding-top: $spacing_2_4;
+  }
+
+  &__most-important-item {
+    padding-top: $spacing_5_0;
+    padding-bottom: $spacing_4_0;
   }
 
   &__categories-item {
-    padding-top: 30px;
+    padding-top: $spacing_3_0;
     width: 100%;
     justify-self: stretch;
+
+    @media screen and (min-width: $screen-lg) {
+      padding-top: $spacing_5_4;
+    }
   }
 
   &__videos-item {
-    padding-top: 12px;
-    padding-bottom: 60px;
+    padding-top: $spacing_1_2;
+    padding-bottom: $spacing_0_8;
 
-    @media screen and (min-width: 1366px) {
-      padding-top: 24px;
+    @media screen and (min-width: $screen-lg) {
+      padding-top: $spacing_2_4;
     }
+  }
+
+  &__custom-grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: $spacing_1_2;
+
+    @media screen and (min-width: $screen-md) {
+      gap: $spacing_2_0;
+    }
+
+    @media screen and (min-width: $screen-lg) {
+      gap: $spacing_2_4;
+    }
+  }
+
+  &__card-wrapper {
+    display: flex;
+    flex-direction: column;
+
+    & > * {
+      height: 100%;
+    }
+  }
+
+  @media screen and (max-width: calc($screen-md - 1px)) {
+    &__custom-grid {
+      grid-template-columns: 1fr;
+    }
+
+    &__card-wrapper {
+      grid-column: span 1 !important;
+    }
+  }
+
+  @media screen and (min-width: $screen-md) and (max-width: calc($screen-lg - 1px)) {
+    &__custom-grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    &__card-wrapper {
+      grid-column: span 1 !important;
+    }
+  }
+
+  @media screen and (min-width: $screen-lg) {
+    &__card-wrapper {
+      &:nth-child(6n + 1),
+      &:nth-child(6n + 2) {
+        grid-column: span 6;
+      }
+
+      &:nth-child(6n + 3),
+      &:nth-child(6n + 4),
+      &:nth-child(6n + 5) {
+        grid-column: span 4;
+      }
+
+      &:nth-child(6n + 6) {
+        grid-column: span 12;
+      }
+    }
+  }
+
+  &__loader-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
   }
 
   &__no-results-container {
     text-align: center;
+    padding-block: $spacing_10_0;
 
-    padding-block: 100px;
-    @media screen and (min-width: 1366px) {
-      padding-block: 153px;
+    @media screen and (min-width: $screen-lg) {
+      padding-block: $spacing_15_3;
     }
   }
 }
