Refactor: update SelectProvider styles for improved layout and responsiveness

--- a/src/blocks/SelectProvider/select-provider.scss
+++ b/src/blocks/SelectProvider/select-provider.scss
@@ -13,17 +13,9 @@
       padding-top: $spacing_2_4;
     }
 
-    @media screen and (min-width: $screen_md) {
-
-      &__provider {
-        justify-self: start;
-        height: 100%;
-      }
-
-      &__provider:nth-child(odd) {
-        justify-self: end;
-        height: 100%;
-      }
+    &__provider {
+      width: 100%;
+      height: 100%;
     }
   }
 }
