--- a/src/backdrops/RegisterAnonymous/register-anonymous.scss
+++ b/src/backdrops/RegisterAnonymous/register-anonymous.scss
@@ -6,7 +6,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: $spacing_2_4;
     gap: $spacing_2_4;
+
+    &__access-token-container {
+      background-color: #edf0f9;
+      padding: $spacing_1_6;
+      border-radius: $border_radius_2_4;
+    }
   }
 }
