Refactor: streamline dependencies in Consultations component and enhance styles for empty state in consultations grid

--- a/src/blocks/Consultations/consultations.scss
+++ b/src/blocks/Consultations/consultations.scss
@@ -15,6 +15,12 @@
       &__grid {
         place-items: center;
 
+        &__empty {
+          display: flex;
+          justify-content: center;
+          text-align: center;
+        }
+
         &__consultation {
           &__item {
             width: calc(100% - 2 * $spacing_1_6);
