--- a/src/blocks/MoodTracker/mood-tracker.scss
+++ b/src/blocks/MoodTracker/mood-tracker.scss
@@ -79,6 +79,19 @@
     }
   }
 
+  &__rating-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: $spacing_1_6;
+    width: 100%;
+
+    @media screen and (min-width: $screen-md) {
+      width: calc(100% - 2 * $spacing_1_6);
+    }
+  }
+
   &__rating-box {
     margin-top: $spacing_1_6;
     padding: $spacing_1_6;
@@ -106,7 +119,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      margin: $spacing_1_2 auto;
+      margin: $spacing_1_2;
       width: 100%;
 
       @media screen and (min-width: $screen_md) {
