--- a/src/blocks/ConsultationsDashboard/consultations-dashboard.scss
+++ b/src/blocks/ConsultationsDashboard/consultations-dashboard.scss
@@ -13,14 +13,14 @@
       display: flex;
       flex-direction: column;
 
-      @media screen and (min-width: $screen-lg) {
+      @media screen and (min-width: $screen-md) {
         flex-direction: row;
       }
 
       &__part {
         padding: $spacing_3_2;
 
-        @media screen and (min-width: $screen-lg) {
+        @media screen and (min-width: $screen-md) {
           width: 100%;
 
           &:not(
@@ -30,7 +30,7 @@
           }
         }
 
-        & h3 {
+        & > h3 {
           text-align: left;
           font-weight: 300;
           letter-spacing: 0.01em;
@@ -38,10 +38,22 @@
 
         &:first-child {
           border-bottom: 2px solid $color_gray_ea;
+          @include themifyCustom(
+            $themes,
+            "border-bottom-color",
+            "color_gray_ea",
+            "color_gray_344054"
+          );
 
-          @media screen and (min-width: $screen-lg) {
+          @media screen and (min-width: $screen-md) {
             border-bottom: none;
             border-right: 2px solid $color_gray_ea;
+            @include themifyCustom(
+              $themes,
+              "border-right-color",
+              "color_gray_ea",
+              "color_gray_344054"
+            );
           }
         }
 
@@ -49,7 +61,7 @@
           &:first-child {
             border-bottom: none;
 
-            @media screen and (min-width: $screen-lg) {
+            @media screen and (min-width: $screen-md) {
               border-right: none;
             }
           }
